--- a/book/src/main/resources/application.properties
+++ b/book/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ticketbook
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-server.port=8080
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Server Port Configuration (optional)
+server.port=8080
