--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@types/node": "^16.18.57",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.10",
+    "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "sass": "^1.68.0",
     "styled-components": "^5.3.11",
