--- a/screen/package.json
+++ b/screen/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^16.18.57",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.10",
+    "@types/react-toastify": "^4.1.0",
     "axios": "^1.6.1",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
