--- a/screen/package.json
+++ b/screen/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18.2.10",
     "axios": "^1.6.1",
     "dayjs": "^1.11.10",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
