--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
-    "mongoose": "^7.8.6"
+    "mongoose": "^7.8.6",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "nodeman": "^1.1.2",
