--- a/screens/package.json
+++ b/screens/package.json
@@ -16,11 +16,14 @@
     "@fullcalendar/react": "^6.1.17",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.3"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.3",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
