--- a/screens/package.json
+++ b/screens/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "pdfkit": "^0.17.1",
